content/sensu-go/6.1/plugins/supported-integrations/timescaledb.md
---
title: "TimescaleDB integration"
linkTitle: "TimescaleDB"
description: "Use the Sensu TimescaleDB Handler plugin to integrate Sensu with your existing TimescaleDB workflows. Read about the features of Sensu's TimescaleDB integration and learn how to get the plugin."
version: "6.1"
product: "Sensu Go"
menu: 
  sensu-go-6.1:
    parent: supported-integrations
---

The Sensu TimescaleDB Handler plugin is a Sensu [handler][1] that sends Sensu metrics to the time-series database TimescaleDB so you can store, instrument, and visualize Sensu metrics data.

{{% notice note %}}
**NOTE**: The Sensu TimescaleDB Handler plugin is an example of Sensu's status and metrics processing and storage integrations.
To find more integrations, search [Bonsai, the Sensu asset index](https://bonsai.sensu.io/).
{{% /notice %}}

## Features

**NEED TO COMPLETE** Does event-based templating apply for the TimescaleDB integration? Are there other features to add here? Is my draft list accurate?

- Transform metrics to TimescaleDB format: extract and transform the metrics you collect from different sources like Graphite, OpenTSDB, Nagios, and Influx and populate them into TimescaleDB.
- Use Sensu [environment variables and secrets management][3] to avoid exposing your TimescaleDB username and password.
- [Event-based templating][2]: include observation data from event attributes to add meaningful, actionable context.

## Get the plugin

To build your own workflow or integrate Sensu with existing workflows, add the [Sensu TimescaleDB Handler plugin][4] with a dynamic runtime asset from Bonsai, the Sensu asset index.
[Dynamic runtime assets][5] are shareable, reusable packages that make it easier to deploy Sensu plugins.


[1]: ../../../observability-pipeline/observe-process/handlers/
[2]: ../../../observability-pipeline/observe-process/handler-templates/
[3]: ../../../operations/manage-secrets/
[4]: https://bonsai.sensu.io/assets/sensu/sensu-timescaledb-handler
[5]: ../../assets/
